src/tests/test-src/errors/E26-redeclare-struct.syntran
// E26: redeclare-struct
// A struct was declared twice

struct S
{
	x: i32,
}

struct S
{
	y: i32,
}
